# Hasky-Types

./: .gitignore  .travis.yml  CHANGELOG.md  Hasky-Types.cabal  Pythas-Types.cabal  README.md
.github/workflows/: haskell.yml
src/Foreign/Hasky/: Array.hs  List.hs  String.hs  Tuples.hs
src/Foreign/Pythas/: Array.hs  List.hs  String.hs  Templates.hs  Tuples.hs
test/: CTest.hs  Main.hs  TypeProperties.hs
test/libs/: c_test.c  c_test.h  c_test.h.gch
